# java-scip

./: .dockerignore  .gitignore  README.md  build.gradle  build_jni.sh  docker-compose.yml  settings.gradle  start.sh  test.sh
docker/: Dockerfile.app  Dockerfile.app.alpine  Dockerfile.dep  Dockerfile.dep.alpine  Dockerfile.env  env.sh
docker/dep/: Dockerfile.dep
jni/: CMakeLists.txt
jni/java/: Hello.java  HelloJNI.java
jni/src/: hellojni_wrap.c
src/main/java/com/example/javascip/: HelloController.java  JavaScipApplication.java  JavaScipJNI.java  ScipApplication.java  ScipController.java  ScipService.java  ScipSolver.java  Solver.java
src/main/java/com/example/javascip/strategy/: StrategyFactory.java  StrategyFactoryImpl.java
src/main/resources/lib/: libjscip.dylib
src/test/java/com/example/javascip/: HelloControllerTest.java  JavaScipApplicationTests.java  ScipControllerTest.java
